--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,8 +2,27 @@
 
 {% block body %}
   <div class="container">
+  {% for message in get_flashed_messages(category_filter=['success'])  %}
+      <div class="alert alert-success alert-dismissible">
+        <button class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+      </div>
+  {% endfor %}
+
+   {% for message in get_flashed_messages(category_filter=['error'])  %}
+      <div class="alert alert-danger alert-dismissible">
+        <button class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+      </div>
+  {% endfor %}
+
       {% block content %} {% endblock %}
   </div>
+
+  {% block scripts %}
+    {{ super() }}
+  {% endblock %}
+
 {% endblock %}
 
  
